--- a/article/pom.xml
+++ b/article/pom.xml
@@ -35,9 +35,9 @@
             <version>${mybatisplus-spring-boot-starter.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.velocity</groupId>
-            <artifactId>velocity-engine-core</artifactId>
-            <version>2.0</version>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-generator</artifactId>
+            <version>${mybatisplus-spring-boot-starter.version}</version>
         </dependency>
         <!-- mybatis-plus end -->
         <dependency>
