--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <java.version>1.8</java.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <mybatisplus-spring-boot-starter.version>3.0.5</mybatisplus-spring-boot-starter.version>
+        <mybatisplus-spring-boot-starter.version>3.3.1.tmp</mybatisplus-spring-boot-starter.version>
         <fastjson.version>1.2.39</fastjson.version>
         <gson.version>2.8.0</gson.version>
         <mysql.version>8.0.15</mysql.version>
